# fly_v4

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32F103CBTX_FLASH.ld  air32f103cb.cfg  fly_v4.ioc
Core/Inc/: FreeRTOSConfig.h  attitude_task.h  blink_task.h  cpu_statics.h  display_task.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  user_tasks.h
Core/Src/: attitude_task.c  blink_task.c  cpu_statics.c  display_task.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  user_tasks.c
User/: CMakeLists.txt
User/display/: CMakeLists.txt
User/display/inc/: ssd1306.h  ssd1306_conf.h
User/display/src/: ssd1306.c
User/drone_control/: CMakeLists.txt
User/drone_control/inc/: attitude_controller.h  controller_pid.h  filter.h  physicalConstants.h  pid.h  position_controller.h  stabilizer_types.h
User/drone_control/src/: attitude_pid_controller.c  filter.c  num.c  pid.c  position_controller_pid.c
User/fusion/: CMakeLists.txt
User/inc/: hello.h
User/sensor/: CMakeLists.txt
User/sensor/inc/: mpu6050_raw.h
User/sensor/src/: mpu6050_raw.c
User/src/: hello.c
User/tasks/: CMakeLists.txt
